# qctddft

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/qctddft/: __init__.py  assign.py  cli.py  cluster.py  extract.py  io.py  plots.py  regions.py  spectra.py
src/tests/: test_regions.py  test_smoke.py
