[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qctddft"
version = "0.1.0"
description = "Processing utilities for Q-Chem TDDFT (EFP/PCM/vacuum), spectra & region analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "pandas>=2.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]

[project.scripts]
qctddft = "qctddft.cli:run"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]


