[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qctddft"
version = "1.0.0"
description = "Q-Chem TDDFT extraction, spectra, and region analysis"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Senal Liyanage" }]
dependencies = [
  "typer>=0.9",
  "pandas>=2.0",
  "numpy>=1.23",
  "matplotlib>=3.7",
  "scipy>=1.10",  # keep if any module uses scipy.special.erf
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Intended Audience :: Science/Research"
]

[project.scripts]
qctddft = "qctddft.cli:run"

[project.urls]
Homepage = "https://github.com/fr-0zt/"
Repository = "https://github.com/fr-0zt/qctddft/"

[tool.setuptools.packages.find]
where = ["src"]
include = ["qctddft*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "black>=23",
  "ruff>=0.4",
  "build>=1.0",
  "twine>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
